fixed contact-us section mobile responsiveness

--- a/app/globals.css
+++ b/app/globals.css
@@ -75,6 +75,7 @@
     }
 }
 
+
 @media only screen and (max-width: 900px) {
     .hero {
         min-height: 30vh;
@@ -82,6 +83,36 @@
 
     .brands-cards-container {
         grid-template-columns: repeat(3, minmax(0, 1fr));
+    }
+
+    .services-container {
+        gap: 4rem;
+    }
+
+    .services-wrapper {
+        padding-top: 6rem;
+        padding-bottom: 6rem;
+    }
+
+    .services-cards {
+        flex-wrap: wrap;
+    }
+
+    .contact-us-container {
+        flex-direction: column;
+        gap: 2rem;
+    }
+
+    .contact-us-left-header {
+        text-align: center;
+    }
+
+    .contact-us-left {
+        align-items: center;
+    }
+
+    .contact-us-right {
+        gap: 4rem;
     }
 }
 
@@ -194,6 +225,30 @@
         font-size: 1.2rem;
         text-align: center;
         margin-top: 3rem;
+    }
+
+    .contact-us-wrapper {
+        padding-left: 1rem;
+        padding-right: 1rem;
+        border: none;
+    }
+
+    .contact-us-info-container {
+        font-size: 1rem;
+    }
+
+    .contact-us-left-header {
+        font-size: 3rem;
+        text-align: center;
+    }
+
+    .contact-us-right {
+        padding-left: 1rem;
+        gap: 2rem;
+    }
+
+    .contact-us-input {
+        width: 16rem;
     }
 
 }
